Started to fix line overflow issue

--- a/styles/documentation.css
+++ b/styles/documentation.css
@@ -65,7 +65,3 @@ hr {
   margin-left: 220px;
   padding: 20px;
 }
-.paragraph {
-  margin: 0;
-  padding: 0;
-}
